--- a/UnitTest/linux/loader/makefile
+++ b/UnitTest/linux/loader/makefile
@@ -7,6 +7,7 @@ DEBUG=
 
 BIN= md2file_info.cc \
 	 test_md2loader.cc \
+	 mesh_loader.cc 
 	
 
 
@@ -33,7 +34,7 @@ FLAGS=-g -Wall   -DLINUX
 INCLUDE=-I. -I./debug   -I../   -I../../../src -I../../../thirdparty
 LIB=-Llib -L../lib  -L../../../build/lib -l$(PROJECT) -l$(PROJECT)debug \
    	-lfsys -lcore -lutil -ltinyjpeg -lgraphics -llibpng -lzlib  -lglut \
-	-lX11 -lGLU -lGL -lGLEW -lmodel
+	-lX11 -lGLU -lGL -lGLEW -lmodel -lscript
 
 
 
