--- a/UnitTest/linux/loader/makefile
+++ b/UnitTest/linux/loader/makefile
@@ -5,11 +5,12 @@ SRC=
 
 DEBUG=
 
-BIN= md2file_info.cc \
+#BIN= md2file_info.cc \
 	 test_md2loader.cc \
 	 mesh_loader.cc  \
 	 mesh_show.cc 
-	
+
+BIN=mesh_show.cc
 
 
 
@@ -34,8 +35,8 @@ CC=g++
 FLAGS=-g -Wall   -DLINUX
 INCLUDE=-I. -I./debug   -I../   -I../../../src -I../../../thirdparty
 LIB=-Llib -L../lib  -L../../../build/lib -l$(PROJECT) -l$(PROJECT)debug \
-   	-lfsys -lcore -lutil -ltinyjpeg -lgraphics -llibpng -lzlib  -lGL -lglut  \
-	-lX11  -lmodel -lscript
+   	-lfsys -lcore -lutil -ltinyjpeg -lgraphics -llibpng -lzlib  -lGL -lGLU -lGLEW \
+	-lX11  -lmodel -lscript -lloader
 
 
 
