--- a/UnitTest/linux/loader/makefile
+++ b/UnitTest/linux/loader/makefile
@@ -34,7 +34,7 @@ CC=g++
 FLAGS=-g -Wall   -DLINUX
 INCLUDE=-I. -I./debug   -I../   -I../../../src -I../../../thirdparty
 LIB=-Llib -L../lib  -L../../../build/lib -l$(PROJECT) -l$(PROJECT)debug \
-   	-lfsys -lcore -lutil -ltinyjpeg -lgraphics -llibpng -lzlib  -lGL -lglut  \
+   	-lfsys -lcore -lutil  -lgraphics   -lGL -lglut  \
 	-lX11  -lmodel -lscript
 
 
