@add event dispatcher

--- a/UnitTest/linux/shader/makefile
+++ b/UnitTest/linux/shader/makefile
@@ -29,7 +29,7 @@ BIN_OBJ_NAME_WITH_PATH=$(addprefix obj/,$(BIN_OBJ_NAME))
 
 CC=g++
 FLAGS=-g -Wall  -DLINUX
-INCLUDE=-I. -I./debug   -I../   -I../../../src -I../../../thirdparty
+INCLUDE=-I. -I./debug   -I../   -I../../../src -I../../../platform/thirdparty
 LIB=-Llib -L../lib  -L../../../build/lib -l$(PROJECT) -l$(PROJECT)debug \
    	-lfsys -lcore -lutil -ltinyjpeg -lgraphics -llibpng -lzlib -lGLU -lglut -lGLEW
 
