--- a/src/math/makefile
+++ b/src/math/makefile
@@ -5,16 +5,18 @@ FILE_EXT=cc
 
 #Project infor 
 PROJECT_PATH=../../build/
-PROJECT=mathutil
+PROJECT=math
 
 # User Config Information 
 LIB_DIR=$(PROJECT_PATH)lib
 OBJ_DIR=$(PROJECT_PATH)obj
 SRC_DIR=./
-INCLUDE_DIR=  -I./  -I../  -I../../thirdparty
+INCLUDE_DIR=  -I./  -I../  -I../../platform/thirdparty
 
 #Source File 
-SRC=  FsQuaternion.cc 
+SRC=  FsQuaternion.cc  \
+	  FsMathUtil.cc \
+
 	 
 	
 
