--- a/UnitTest/linux/window/makefile
+++ b/UnitTest/linux/window/makefile
@@ -29,10 +29,10 @@ BIN_OBJ_NAME_WITH_PATH=$(addprefix obj/,$(BIN_OBJ_NAME))
 
 CC=g++
 FLAGS=-g -Wall   -DLINUX
-INCLUDE=-I. -I./debug   -I../   -I../../../src -I../../../thirdparty
+INCLUDE=-I. -I./debug   -I../   -I../../../src -I../../../platform/thirdparty
 LIB=-Llib -L../lib  -L../../../build/lib -l$(PROJECT) -l$(PROJECT)debug \
    	-lfsys -lcore -lutil  -lgraphics  -lglut \
-	-lX11 -lGLU -lGL 
+	-lX11 -lGLU -lGL  -lGLEW
 
 
 
