@add lua support(70%)

--- a/application/FaerisLua/pkg/makefile
+++ b/application/FaerisLua/pkg/makefile
@@ -1,3 +1,6 @@
 main:
-	tolua++.exe -o FsLuaFaeris.cc  FsFaeris.pkg
+	./luabind++.exe -o temp  FsFaeris.pkg
+	cat temp | perl ../tools/t_luafunc.pl  >FsLuaFaeris.cc 
+	rm -f temp
 	cp FsLuaFaeris.cc ../src/FsLuaFaeris.cc 
+	cp FsLuaFaeris.cc ../tools/FsLuaFaeris.cc 
