@add shader support(55%)

--- a/src/loader/makefile
+++ b/src/loader/makefile
@@ -14,8 +14,12 @@ SRC_DIR=./
 INCLUDE_DIR=  -I./ -I../
 
 #Source File 
-SRC=FsMeshLoader.cc \
-	FsTextureLoader.cc 
+#SRC=FsMeshLoader.cc \
+#	FsTextureLoader.cc 
+#
+
+
+SRC=FsGeometryLoader.cc 
 
 
 
