@add material shader support(75%)

--- a/application/FaerisLua/linux.proj/makefile.debug
+++ b/application/FaerisLua/linux.proj/makefile.debug
@@ -28,6 +28,7 @@ LINK_LIB= -lscript \
 		  -lfsys \
 		  -lloader \
 		  -lmodel \
+		  -lmaterial \
 		  -lmath \
 		  -lgraphics \
 	      -lGL  \
