--- a/application/FaerisLua/pkg/makefile
+++ b/application/FaerisLua/pkg/makefile
@@ -1,5 +1,5 @@
 main:
-	./luabind++.exe -o temp  FsFaeris.pkg
+	./tolua++.exe -o temp  FsFaeris.pkg
 	cat temp | perl ../tools/t_luafunc.pl |perl ../tools/t_func_array.pl  >FsLuaFaeris.cc 
 	rm -f temp
 	cp FsLuaFaeris.cc ../src/FsLuaFaeris.cc 
