@add shader material support (85%)

--- a/platform/win32.proj/faeris/faeris.vcproj
+++ b/platform/win32.proj/faeris/faeris.vcproj
@@ -586,6 +586,14 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\..\src\loader\FsMeshLoader.cc"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\loader\FsMeshLoader.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\src\loader\FsProgramLoader.cc"
 					>
 				</File>
