--- a/application/FaerisLua/pkg/makefile
+++ b/application/FaerisLua/pkg/makefile
@@ -1,6 +1,3 @@
 main:
-	./tolua++.exe -o temp  FsFaeris.pkg
-	cat temp | perl ../tools/t_luafunc.pl |perl ../tools/t_func_array.pl  >FsLuaFaeris.cc 
-	rm -f temp
-	cp FsLuaFaeris.cc ../src/FsLuaFaeris.cc 
-	cp FsLuaFaeris.cc ../tools/FsLuaFaeris.cc 
+	./tolua++.exe -L "basic.lua" -o FsLuaFaeris.cc FsFaeris.pkg
+	mv FsLuaFaeris.cc ../src/FsLuaFaeris.cc 
