--- a/application/FaerisLua/proj.win32/FaerisLua/FaerisLua.vcproj
+++ b/application/FaerisLua/proj.win32/FaerisLua/FaerisLua.vcproj
@@ -213,6 +213,14 @@
 				Name="luaext"
 				>
 				<File
+					RelativePath="..\..\src\luaext\FsLuaColorLayer.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\src\luaext\FsLuaLayer2D.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\src\luaext\FsLuaScene.cc"
 					>
 				</File>
@@ -234,6 +242,10 @@
 				</File>
 				<File
 					RelativePath="..\..\src\luaext\FsLuaTouchEventListener.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\src\luaext\FsTLuaLayer.h"
 					>
 				</File>
 			</Filter>
