@add template for lua class export

--- a/application/FaerisLua/proj.win32/FaerisLua/FaerisLua.vcproj
+++ b/application/FaerisLua/proj.win32/FaerisLua/FaerisLua.vcproj
@@ -213,11 +213,7 @@
 				Name="luaext"
 				>
 				<File
-					RelativePath="..\..\src\luaext\FsLuaColorLayer.h"
-					>
-				</File>
-				<File
-					RelativePath="..\..\src\luaext\FsLuaLayer2D.h"
+					RelativePath="..\..\src\luaext\FsLuaLayer.h"
 					>
 				</File>
 				<File
