--- a/application/FaerisLua/proj.android/AndroidManifest.xml
+++ b/application/FaerisLua/proj.android/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:minSdkVersion="8"
         android:targetSdkVersion="10" />
     <uses-feature android:required="true" android:glEsVersion="0x00020000"/>
-
+	<uses-permission android:name="android.permission.WRITE_SETTINGS" />
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
