--- a/application/FaerisLua/proj.android/.project
+++ b/application/FaerisLua/proj.android/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>faeris.so</name>
+	<name>LuaActivity</name>
 	<comment></comment>
 	<projects>
 	</projects>
