--- a/application/FaerisLua/proj.android/AndroidManifest.xml
+++ b/application/FaerisLua/proj.android/AndroidManifest.xml
@@ -9,6 +9,8 @@
         android:targetSdkVersion="10" />
     <uses-feature android:required="true" android:glEsVersion="0x00020000"/>
 	<uses-permission android:name="android.permission.WRITE_SETTINGS" />
+	<uses-permission android:name="android.permission.RAISED_THREAD_PRIORITY" />
+	<uses-permission android:name="android.permission.WAKE_LOCK" />
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -17,7 +19,8 @@
         <activity 
             android:name="org.faeris.game.LuaActivity"
             android:label="@string/app_name"
-            android:screenOrientation="landscape" >
+            android:screenOrientation="landscape"
+            android:configChanges="keyboard|keyboardHidden|orientation" >
            	<intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
