--- a/application/FaerisLuaExport/proj.android/AndroidManifest.xml
+++ b/application/FaerisLuaExport/proj.android/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="org.faeris.game"
+    package="org.faeris.fgame"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -13,13 +13,13 @@
 	<uses-permission android:name="android.permission.WAKE_LOCK" />
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/faeris_logo"
         android:label="@string/app_name"
-        android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
+        android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
         <activity 
-            android:name="org.faeris.game.LuaActivity"
+            android:name="org.faeris.fgame.fgame"
             android:label="@string/app_name"
-            android:screenOrientation="landscape"
+            android:screenOrientation="portrait"
             android:configChanges="keyboard|keyboardHidden|orientation" >
            	<intent-filter>
                 <action android:name="android.intent.action.MAIN" />
