--- a/application/FaerisLuaExport/proj.win32/FaerisWin32/FaerisWin32.vcproj
+++ b/application/FaerisLuaExport/proj.win32/FaerisWin32/FaerisWin32.vcproj
@@ -92,7 +92,7 @@
 		</Configuration>
 		<Configuration
 			Name="Release|Win32"
-			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
+			OutputDirectory="../../bin"
 			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="1"
 			CharacterSet="1"
@@ -117,6 +117,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
+				AdditionalIncludeDirectories="../../../../libfaeris/src/support;../../../../libfaeris/src/;../../../../libextends/libluaexport/src;../../../../platform/thirdparty/win32"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
@@ -135,7 +136,10 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
+				AdditionalDependencies="faeris.lib freetype.lib glew32.lib libpng.lib lua.lib minizip.lib tolua++.lib zlib.lib luaexport.lib opengl32.lib libaudio.lib fmodex.lib"
+				OutputFile="$(OutDir)\$(ProjectName)Release.exe"
 				LinkIncremental="1"
+				AdditionalLibraryDirectories="../../../../build/win32/prebuild/release"
 				GenerateDebugInformation="true"
 				SubSystem="2"
 				OptimizeReferences="2"
