--- a/libextends/libluaexport/proj.win32/luaexport.vcproj
+++ b/libextends/libluaexport/proj.win32/luaexport.vcproj
@@ -80,7 +80,7 @@
 		</Configuration>
 		<Configuration
 			Name="Release|Win32"
-			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
+			OutputDirectory="../../../build/win32/prebuild/release"
 			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="4"
 			CharacterSet="1"
@@ -105,6 +105,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
+				AdditionalIncludeDirectories="../src;../../../libfaeris/src/support;../../libaudio/src;../../../libfaeris/src;../../../platform/thirdparty/win32/;&quot;../../../platform/thirdparty/win32/tolua++&quot;;../../../platform/thirdparty/win32/lua"
 				PreprocessorDefinitions="WIN32;NDEBUG;_LIB"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
