@add http support(90%)

--- a/application/L_Faeris/proj.linux/makefile.debug
+++ b/application/L_Faeris/proj.linux/makefile.debug
@@ -38,9 +38,11 @@ LINK_LIB= -lfaeris \
 		  -lzlib \
 		  -lfreetype \
 		  -lminizip \
-		  -lluaexport \
+		  -lluaexportd \
 		  -laudio  \
-		  -lfmodex
+		  -lfmodex \
+		  -lnetwork \
+		  -lcurl \
 
 
 #Source File 
