--- a/lib/libextends/libluaexport/pkg/makefile
+++ b/lib/libextends/libluaexport/pkg/makefile
@@ -1,7 +1,7 @@
 main:
-	make -C libextends 
-	make -C libluascript
-	make -C libfaeris
+	make TOLUA=tolua++_linux.exe  -C libextends 
+	make TOLUA=tolua++_linux.exe  -C libluascript
+	make TOLUA=tolua++_linux.exe  -C libfaeris
 
 
 
