--- a/lib/libextends/libluaexport/pkg/libextends/makefile
+++ b/lib/libextends/libluaexport/pkg/libextends/makefile
@@ -1,5 +1,6 @@
 main:
-	../tolua++.exe -L "../basic.lua" -o ../../src/luaexport/FsLibAudioExport.cc FsLibAudio.pkg
+	../../tool/$(TOLUA) -L "../basic.lua" -o ../../src/luaexport/FsLibAudioExport.cc FsLibAudio.pkg
+	../../tool/$(TOLUA) -L "../basic.lua" -o ../../src/luaexport/FsLibNetworkExport.cc FsLibNetwork.pkg
 
 
 
