--- a/lib/libextends/libluaexport/pkg/libfaeris/makefile
+++ b/lib/libextends/libluaexport/pkg/libfaeris/makefile
@@ -1,5 +1,5 @@
 main:
-	../tolua++.exe -L "../basic.lua" -o ../../src/luaexport/FsLibFaerisExport.cc FsLibFaeris.pkg
+	../../tool/$(TOLUA) -L "../basic.lua" -o ../../src/luaexport/FsLibFaerisExport.cc FsLibFaeris.pkg
 
 
 
